--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -64,7 +64,7 @@ jobs:
       - run: echo "" >> ~/.ssh/access  # fix
       - name: Deploy the website
         env: 
-          WEBROOT: /data/wwwroot/roocode
+          WEBROOT: /data/wwwroot/docker
         run: |
           ssh webserver "rm -rf $WEBROOT && mkdir -p $WEBROOT"
           scp -r docsite/public/* webserver:${WEBROOT}
