--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Fetch Source
         run: |
           git clone https://github.com/docker/docs.git docsite
+      - name: Fix
+        run: |
+          sed -i 's/refLinksErrorLevel: WARNING/refLinksErrorLevel: ERROR/' docsite/hugo.yaml
       - name: Build Docs
         run: |
           cp -r docs_zh/* ./docsite/content
