--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,16 +22,12 @@ defaults:
     shell: bash
 
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     env:
       HUGO_VERSION: 0.154.2
       TZ: Asia/Shanghai
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/configure-pages@v5
       - uses: actions/checkout@v6
       - name: Install Hugo
         run: |
@@ -53,10 +49,51 @@ jobs:
           cd docsite/
           npm install
           hugo build
-      - name: Copy CNAME  
+      - name: Copy CNAME
         run: cp CNAME docsite/public/
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v6
+        with:
+          name: docs-site
+          path: docsite/public
+          retention-days: 1
 
-      ### SSH Server WEB
+  deploy-github-pages:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      # - uses: actions/configure-pages@v5
+      - name: Download build artifacts
+        uses: actions/download-artifact@v6
+        with:
+          name: docs-site
+          path: ./public
+      - name: Deploy to Branch
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
+      # - uses: actions/upload-pages-artifact@v4
+      #   with:
+      #     path: docsite/public
+      # - uses: actions/deploy-pages@v4
+      #   id: deployment
+
+  deploy-ssh-server:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v6
+        with:
+          name: docs-site
+          path: ./public
+      - name: Compress to tar.xz
+        run: |
+          tar -cJf docs-site.tar.xz public/
       - name: Set up SSH
         uses: LuisEnMarroquin/setup-ssh-action@v3.0.0
         with:
@@ -67,22 +104,9 @@ jobs:
           USER: ${{ secrets.SSH_USERNAME }}
       - run: echo "" >> ~/.ssh/access  # fix
       - name: Deploy the website
-        env: 
+        env:
           WEBROOT: /data/wwwroot/docker
         run: |
           ssh webserver "rm -rf $WEBROOT && mkdir -p $WEBROOT"
-          scp -r docsite/public/* webserver:${WEBROOT}
-
-      ### GitHub Pages
-      # - run: cp CNAME docsite/public/
-      # - uses: actions/upload-pages-artifact@v4
-      #   with:
-      #     path: docsite/public
-      # - uses: actions/deploy-pages@v4
-      #   id: deployment
-
-      - name: Deploy to Branch
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docsite/public
+          scp docs-site.tar.xz webserver:${WEBROOT}/
+          ssh webserver "cd $WEBROOT && tar -xJf docs-site.tar.xz --strip-components=1 && rm -f docs-site.tar.xz"
