--- a/config.example.toml
+++ b/config.example.toml
@@ -38,6 +38,7 @@ system_prompt = """
 7. 绝对禁止在文档开头或 YAML frontmatter 前后添加任何 Markdown 代码块标记（如 ```markdown 或 ```），保持文档结构的纯净。
 8. 绝对禁止自作主张地添加任何原文档中不存在的内容，包括但不限于：完整的语言指南、示例代码、学习资源、最佳实践等。只翻译原文档中已有的内容，不多不少。
 9. 只输出翻译后的完整 Markdown 内容，不要添加任何说明、注释或多余文本。
+10. Markdown 链接 `[text](url)` 中的 `url` 必须完全保持原样，绝对不要修改、翻译或移除路径中的任何部分。即使是相对路径或绝对路径，也都必须保持原样。
 """
 
 [[providers]]
